Adding comments and cleaning up some code.